fixed loaders styles on mobile screns

--- a/modules/ProfilePage/pages/profile-page.module.css
+++ b/modules/ProfilePage/pages/profile-page.module.css
@@ -3,7 +3,7 @@
 }
 
 .soon-text {
-  @apply text-3xl font-bold text-dark-grey;
+  @apply text-lg sm:text-2xl md:text-3xl font-bold text-dark-grey;
 }
 
 .loader {
